k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: floci-ui
  namespace: apps-ns
  labels:
    app: floci-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: floci-ui
  template:
    metadata:
      labels:
        app: floci-ui
    spec:
      containers:
      - name: floci-ui
        image: floci-ecr-registry:5000/floci-ui:0.5.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4500

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        livenessProbe:
          httpGet:
            path: /
            port: 4500
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 4500
          initialDelaySeconds: 5
          periodSeconds: 5
