k8s/floci-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: floci
  namespace: apps-ns
  labels:
    app: floci
spec:
  selector:
    app: floci
  ports:
  - protocol: TCP
    port: 4566
    targetPort: 4566
    name: floci
