k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: floci-ui
  namespace: apps-ns
  labels:
    app: floci-ui
spec:
  ingressClassName: traefik
  rules:
  - host: floci-ui.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: floci-ui
            port:
              number: 4500
